fix light mode styling, mobile styling, spacing

--- a/src/components/homepage/BlogPreview.css
+++ b/src/components/homepage/BlogPreview.css
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   height: calc(100% - 160px);
-  gap: 0.5rem;
+  gap: 0.75rem;
   justify-content: space-between;
   padding-bottom: 0;
 }
@@ -55,11 +55,12 @@
 
 .blog-preview-slider .card-description {
   margin-top: -0.5rem;
-  min-height: 27%;
+  min-height: 30%;
+  -webkit-line-clamp: 5;
 }
 
 .blog-preview-slider .read-more {
-  padding: 0.5rem 0;
+  padding: 0.875rem 1.5rem;
   margin-top: auto;
   border-top: 1px solid var(--border-color-light);
   width: 100%;
