--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -5,8 +5,15 @@
   padding: 2rem 0;
   font-size: 1rem;
   text-align: center;
-  margin-top: auto;
+  /* Remove margin-top: auto to allow proper spacing from contact section */
   border-top: 1px solid var(--surface-3);
+  /* Make footer span full width */
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
 }
 
 .footer__container {
